# taskify

./: .gitignore  pyproject.toml  pyrightconfig.json
taskify-admin/: main.py  pyproject.toml
taskify-components/taskify-common/: pyproject.toml
taskify-mall/: pyproject.toml
taskify-order/: main.py  pyproject.toml
taskify_admin/: main.py  pyproject.toml
taskify_components/taskify_common/: __init__.py  pyproject.toml
taskify_components/taskify_common/src/: __init__.py
taskify_components/taskify_common/src/auth/: auth_middleware.py  password_helper.py  token_helper.py
taskify_components/taskify_common/src/expection/: __init__.py  exception.py  exception_advice.py  exception_code.py
taskify_components/taskify_common/src/logger/: __init__.py  logger.py
taskify_components/taskify_common/src/response/: result.py
taskify_components/taskify_redis/: __init__.py  pyproject.toml
taskify_components/taskify_redis/src/: __init__.py  redis_helper.py
taskify_mall/: main.py  pyproject.toml
taskify_order/: main.py  pyproject.toml
