[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskify"
version = "0.1.0"
description = "Taskify monorepo"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "taskify_admin",
    "taskify_mall",
    "taskify_order",
    "taskify_components/taskify_common",
    "taskify_components/taskify_redis"
]
