[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskify-common"
version = "0.1.0"
description = "Common utilities shared across Taskify services"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.117.1",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "starlette>=0.48.0",
    "taskify_redis"
]

[tool.uv.sources]
taskify_redis = { path = "../taskify_redis" }


[tool.setuptools.packages.find]
where = ["."]
include = ["taskify_components*"]

