[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskify_redis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "redis>=6.4.0",
]

[tool.setuptools]
packages = ["taskify_redis"]

[tool.setuptools.package-dir]
taskify_redis = "."